# rednote

./: README.md  index.html  package.json
.github/workflows/: build.yml
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Editor.jsx  FindingEditor.jsx  NoteEditor.jsx  ProjectSelector.jsx  PushModal.jsx  Settings.jsx  Sidebar.jsx  TitleBar.jsx
src/styles/: global.css
